<resources>
    <string name="app_name">JavaScript</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_nam">T_JavaScript</string>
    <string name="tutorial">Tutorial JavaScript</string>
    <string name="iniciar">Iniciar</string>
    <string name="inicio">Inicio</string>
    <string name="introduccion">Introducción</string>
    <string name="fundamentos">Fundamentos</string>
    <string name="constructores">Literales y Constructores</string>
    <string name="funciones">Funciones</string>
    <string name="creacion">Patrones de creacion de objetos</string>
    <string name="reutilizacion">Patrones de la reutilizaciòn de codigo</string>
    <string name="patrones">Patrones de diseño</string>
    <string name="navegador">DOM y Patrones de navegador</string>
    <string name="acerda_de">Acerca De</string>
    <string name="referencias">Referencias</string>
    <string name="introduccion_aa">Introduccion</string>
    <string name="patrones_i">Patrones</string>
    <string name="java">JavaScrip</string>
    <string name="script">ECMAScript</string>
    <string name="hint">JSHint</string>
    <string name="consola">Consola</string>
    <string name="contenido">Contenido</string>
    <string name="evaluar">Evaluar</string>
    <string name="video">Video</string>
    <string name="diseno">Patrones de Diseño</string>
    <string name="funciones_a">Funciones</string>
    <string name="fundamentos_a">Fundamentos</string>
    <string name="literales">Literales y Constructores</string>
    <string name="navegador_a">DOM y Patrones de navegador</string>
    <string name="objetos">Patrones de creacion de objetos</string>
    <string name="funciones_aa">Funciones</string>
    <string name="patrones_a">Patrones de la reutilizaciòn de codigo</string>
    <string name="intro">Introducción</string>
    <string name="fun">Fundamentos</string>
    <string name="lit">Lierales</string>
    <string name="acerca">Acerca De</string>
    <string name="utng">Universidad Tecnologica del Norte de Guanajuato</string>
    <string name="nombre">Veronica Jimenez Avalos</string>
    <string name="clase">Desarrollo de Aplicaciones III</string>
    <string name="referencia">Referencias</string>
    <string name="libro">Libro: JavaScript Patterns</string>
    <string name="autor">Autor: Stoyan Stefanov</string>
    <string name="ver">Iniciar video</string>
    <string name="evalu">Proporcionan un nivel de abstracción:</string>
    <string name="lenguaje">¿Que lenguaje utiliza JavaScript?</string>
    <string name="necesita">¿Que necesita JavaScript para funcionear?</string>
    <string name="rcont">Contenido</string>
    <string name="nuevo_usuario">Registrar Usuario</string>
    <string name="cambiar_usuario">Nombre de Usuario</string>
    <string name="cambio_contrasena">Introduce Contraseña</string>
    <string name="nueva_contrasena">Teclea nueva contraseña</string>
    <string name="conf_basicas">Registro de Usuarios APP</string>
    <string name="conf_secundaria">Configuraciones</string>
    <string name="contenid">Contenido habilitado Modulo 5</string>
    <string name="modulo_cinco">Contenido para 5° Modulo</string>
    <string name="idioma_aplicacion">Selecciona el idioma de la APP</string>
    <string name="cambia_idioma">Cambia el idioma de la APP</string>
    <string name="listar_usuarios">Listar Usuarios</string>
    <string name="regresar">Regresar</string>
    <string name="regresar_summary">Regresar a Menú</string>
    <string name="btn_regresar">btn_regresar</string>
    <string name="usuario">Crear Usuario</string>
    <string name="audio">Audio</string>
    <string name="mu">Musica Relajante</string>
    <string name="introd">Introducción</string>
    <string name="eval">Evaluar</string>
    <string name="cont">Contenido</string>
    <string name="juega">Juega !!!1 Adivina la palabla !!!</string>
    <string name="adibinar">Adivinar</string>
    <string name="vid">Creador de los videos de YouTube: Jesús Conde</string>
    <string name="ji">Continua con mas videos tutoriales en : </string>
    <string name="ing">Ingresa Nombre</string>
    <string name="ape">Ingresa Apellido Paterno</string>
    <string name="apei">Ingresa Apellido Materno</string>
    <string name="usu">Ingresa Usuario</string>
    <string name="ingre">Ingresa Contraseña</string>
    <string name="correo">Ingresa Correo Electronico</string>
    <string name="regis">Registrarme</string>
    <string name="user">Usuario:</string>
    <string name="nuev">Nueva Contraseña:</string>
    <string name="acep">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cod">El codigo se inserta:</string>
    <string name="ci">con;</string>
    <string name="oj">Con ()</string>
    <string name="cyb">Entre script y /script</string>
    <string name="cal">Calificar</string>
    <string name="con">Continuar</string>
    <string name="ni">()</string>
    <string name="no">{}</string>
    <string name="nu">¿Indica como va estucturado el código?</string>
    <string name="ne">[]</string>
    <string name="car">Calificar</string>
    <string name="conti">Continuar</string>
    <string name="eva">Evaluar</string>
    <string name="evalua">¿Los valores tambien pueden ser funciones, siendo así se les llama?</string>
    <string name="de">Métodos</string>
    <string name="da">Metricas</string>
    <string name="du">Matriz</string>
    <string name="ca">Calificar</string>
    <string name="li">Continuar</string>
    <string name="evalua1">¿De que se encarga la funcion init()?</string>
    <string name="graf">Gráfice de aprovechamiento</string>
    <string name="grafi">Gráfica de aprovechamiento</string>
    <string name="grafic">Gráfica de aprovechamiento</string>
    <string name="grafica">Gráfica de aprovechamiento</string>
    <string name="gra">Gráfica de aprovechamiento</string>
    <string name="grac">Gráfica de aprovechamiento</string>
    <string name="gref">Gráfica de aprovechamiento</string>
    <string name="enviar">Enviar</string>
    <string name="jg">Juega! Adivina la Palabra</string>
    <string name="ju">_a__S_____</string>
    <string name="sigue">Suiguiente</string>
    <string name="fel">¡Felicidades terminate el Juego con exito!</string>
    <string name="conte">Contenido</string>
    <string name="jue">Juega! Adivina la Palabra</string>
    <string name="jo">D_____s Cr__k____</string>
    <string name="sigu">Suiguiente</string>
    <string name="juy">Juega! Adivina la Palabra</string>
    <string name="je">___ y P_______ de _a_______</string>
    <string name="sgi">Suiguiente</string>
    <string name="huu">Juega! Adivina la Palabra</string>
    <string name="a">___a</string>
    <string name="shy">Suiguiente</string>
    <string name="ja">Juega! Adivina la Palabra</string>
    <string name="hul">M_____ de _____l____s</string>
    <string name="she">Suiguiente</string>
    <string name="que">¿Que es la herencia clasica?</string>
    <string name="qui">Clases que heredan atributos</string>
    <string name="quu">Clase heredativa</string>
    <string name="qoo">No se hereda sin clase</string>
    <string name="cali">Calificar</string>
    <string name="co">Continuar</string>
    <string name="va">¿De que va acompañada una funcion?</string>
    <string name="e">{}</string>
    <string name="o">()</string>
    <string name="u">[]</string>
    <string name="er">Calificar</string>
    <string name="oo">Continuar</string>
    <string name="mire">¿Al pedir un préstamo a través de métodos, ¿que esamos realizando?</string>
    <string name="meto">Métodos de endeudamiento</string>
    <string name="here">Heredar todos los metodos</string>
    <string name="preta">Prestamo</string>
    <string name="calif">Calificar</string>
    <string name="c">Continuar</string>
    <string name="este">Este patrón se implementa a través del método Object.create ().</string>
    <string name="em">ECMAScript</string>
    <string name="js">JSON</string>
    <string name="ems">ECMAScript 5</string>
    <string name="ficar">Calificar</string>
    <string name="nuar">Continuar</string>
    <string name="los">Los objetos heredan de otros objetos.</string>
    <string name="cir">Cierto</string>
    <string name="fal">Falso</string>
    <string name="lif">Calificar</string>
    <string name="ti">Continuar</string>
    <string name="todoi">Todo lo que necesita es una función para envolver los datos privados.</string>
    <string name="reve">Revelacion</string>
    <string name="priva">Privacidad</string>
    <string name="met">Metodo</string>
    <string name="fir">Calificar</string>
    <string name="ar">Continuar</string>
    <string name="como">¿Cómo se utiliza el patron modulo?</string>
    <string name="lib">Libremente</string>
    <string name="agre">Agregando metodos</string>
    <string name="ampli">Ampliamente</string>
    <string name="califi">Calificar</string>
    <string name="r">Continuar</string>
    <string name="aqe">¿Aquellos que no cambian de una instancia a otra?</string>
    <string name="propi">Propiedades y métodos estáticos</string>
    <string name="mud">Modulo</string>
    <string name="clases">Clases</string>
    <string name="rr">Calificar</string>
    <string name="contt">Continuar</string>
    <string name="ref">¿A que se refiere perezoso de carga?</string>
    <string name="un">Carga de un archivo</string>
    <string name="carga">Carga de un navegador</string>
    <string name="xh">Carga de XHR</string>
    <string name="derf">Calificar</string>
    <string name="ferd">Continuar</string>
    <string name="soporta">¿Qué soporta el protocolo HTTP?</string>
    <string name="frag">Codificación fragmentada</string>
    <string name="estta">Estática.</string>
    <string name="jas">JavaScript.</string>
    <string name="lr">Calificar</string>
    <string name="tir">Continuar</string>
    <string name="bloq">¿Qué bloquea el elemento script?</string>
    <string name="nav">Navegadores</string>
    <string name="sec">Archivo de secuencia.</string>
    <string name="pag">Descargas de páginas progresivas.</string>
    <string name="fc">Calificar</string>
    <string name="nc">Continuar</string>
    <string name="cnd">Significado de CND</string>
    <string name="netw">Network Content Delivery</string>
    <string name="deli">Delivery Network Content</string>
    <string name="conn">Content Delivery Network</string>
    <string name="carr">Calificar</string>
    <string name="nar">Continuar</string>
    <string name="forma">Una forma alternativa de hacer scripting remoto:</string>
    <string name="marcos">Utilizar marcos</string>
    <string name="usar">Usar URL</string>
    <string name="ht">HTTP</string>
    <string name="carrr">Calificar</string>
    <string name="near">Continuar</string>
    <string name="funcion">¿Una función constructora siempre devuelve?</string>
    <string name="tributo">Atributo</string>
    <string name="clas">Clase</string>
    <string name="obj">Objeto</string>
    <string name="il">Calificar</string>
    <string name="ra">Continuar</string>
    <string name="pro">¿Pueden ser creados con la función Array?</string>
    <string name="matri">Matrices de JavaScript</string>
    <string name="ha">That</string>
    <string name="ma">Matriz</string>
    <string name="ilr">Calificar</string>
    <string name="ur">Continuar</string>
    <string name="json">JSON es:</string>
    <string name="jso">JavaScript Object Noacion</string>
    <string name="natal">JavaScrip Object Natal</string>
    <string name="objet">JavaScript Object Notation</string>
    <string name="cari">Calificar</string>
    <string name="nci">Continuar</string>
    <string name="rata">Se trata de combinar las peticiones usando una lógica sencilla:</string>
    <string name="proxy">Proxy</string>
    <string name="bufer">Búfer de 50 mso</string>
    <string name="ser">Servidor</string>
    <string name="vye">Calificar</string>
    <string name="cel">Continuar</string>
</resources>