<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/nu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ni"
        android:id="@+id/cck_rsp1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/cck_rsp2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ne"
        android:id="@+id/cck_rsp3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car"
        android:id="@+id/btn_califi"
        android:layout_gravity="left"
        android:enabled="true"
        android:onClick="presionBotonCalificar"
        android:clickable="true"
        android:background="#02b7ab"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conti"
        android:id="@+id/btn_continuar"
        android:onClick="lineGraphHandler"
        android:clickable="true"
        android:background="#02b7ab"
        android:layout_gravity="right" />

</LinearLayout>